# reddit-shorts-generator

./: .pre-commit-config.yaml  LICENSE  README.adoc  README.md  config.py  docker-compose.build.yml  docker-compose.yml  launcher.py  package.json  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  shorts.db  tox.ini  youtube_tts.txt
pyapp/: Dockerfile  config.py  cronjob  main.py  reddit_bot.py  requirements.txt  tiktok_tts.txt
pyapp/scripts/: class_submission.py  create_short.py  create_short_v2.py  get_reddit_stories.py  init_db.py  make_submission_image.py  make_tts.py  make_video_title.py  make_youtube_metadata.py  minor_operations.py  query_db.py  reddit_submission_identifier.py  tiktok_tts.py  upload_to_tiktok.py  upload_to_youtube.py  utils.py
pyapp/scripts/tiktok-uploader/src/tiktok_uploader/: __init__.py  __main__.py  cli.py  config.toml  upload.py
reddit_shorts/: __main__.py  class_comment.py  class_submission.py  config.py  create_short.py  create_short_v2.py  get_reddit_stories.py  main.py  make_submission_image.py  make_tts.py  make_youtube_metadata.py  query_db.py  tiktok_tts.py  upload_to_youtube.py  utils.py
scripts/: create_short.py  create_youtube_short.py  tiktok_tts.py  upload_to_youtube.py
scripts/tiktok-uploader/src/tiktok_uploader/: upload.py
shorts/: __main__.py  args.py  audio.py  class_comment.py  class_submission.py  config.py  create_short.py  get_reddit_stories.py  main.py  make_submission_image.py  make_tts.py  metadata.py  platforms.py  query_db.py  tiktok_tts.py  utils.py  youtube.py
testing/: reddit_submission_example.py  reddit_submission_identifier.py
tests/: class_comment_test.py  class_submission_test.py  create_youtube_short_test.py  get_reddit_stories_test.py  make_submission_image_test.py  make_youtube_metadata_test.py  utils_test.py
