[metadata]
name = Reddit_Shorts
version = 0.1
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
license_files = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy

[options]
packages = find:
install_requires =
    requests>=2
    praw>=7
    toml>=0.10
    python-dotenv>=1
    ffmpeg-python>=0.2
    openai-whisper>=20231117
    pillow>=10
    google-api-python-client>=2
    google-auth-oauthlib>=1
    google-auth-httplib2>=0.2
    playsound@git+https://github.com/taconi/playsound
python_requires = >=3.8

[options.packages.find]
exclude =
    test*
    testing*

[options.entry_points]
console_scripts =
    shorts = reddit_shorts.main:main

[options.extras_require]
testing =
    pytest>=6

[options.package_data]
reddit_shorts = py.typed

[coverage:run]
plugins = covdefaults

[flake8]
max-line-length = 160

