[metadata]
name = Shorts_Generator
version = 1.0
long_description = file: README.adoc
long_description_content_type = text/plain
license = MIT
license_files = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy

[options]
packages = find:
install_requires =
    ffmpeg-python>=0.2
    google-api-python-client>=2
    google-auth-httplib2>=0.2
    google-auth-oauthlib>=1
    openai-whisper>=v20231117
    pillow>=10
    playsound@git+https://github.com/taconi/playsound
    praw>=7
    python-dotenv>=1
    requests>=2
    toml>=0.10
python_requires = >=3.8

[options.packages.find]
exclude =
    test*
    testing*

[options.entry_points]
console_scripts =
    shorts = shorts.main:_run_main

[options.extras_require]
testing =
    pytest>=6

[options.package_data]
shorts = py.typed

[coverage:run]
plugins = covdefaults

[flake8]
max-line-length = 160
